2005-04-03	Steven Yi		<stevenyi@gmail.com>
	* SConstruct: added arch and cpu commandline options to fine tune gcc3opt
	  flags for -march and -mcpu

2005-04-03	Istvan Varga	<istvan@csounds.com>
	* removed macro definitions for ksmps, esr, ekr, and some others;
	  use csound->Message() instead of printf() and err_printf();
	  (large number of changes in many files)
	* Engine/namedins.c:
	* Engine/express.c:
	  removed static and global variables

2005-03-31	Istvan Varga	<istvan@csounds.com>
	* Engine/entry1.c:
	* OOps/aops.c:
	  added a-rate int() and frac(), and round(), floor(), and ceil()
	* Engine/express.c:
	* Engine/rdorch.c:
	* Top/main.c:
	* H/prototyp.h:
	  added << and >> operators, fixed order of precedence
	  express(), expRESET(): use ENVIRON *csound pointer
	  use less obvious label names for if...then
	* Engine/oload.c:
	* H/csoundCore.h:
	* Top/csound.c:
	  moved static invalue/outvalue function pointers to ENVIRON
	* Opcodes/ugmoss.c:
	  implemented << and >> shift operators
	  fixed bitwise OR at k- and a-rate

2005-03-31  John ffitch  <jpff@codemist.co.uk>

	* Engine/express.c: Removed statics to environment structure

2005-03-30	Istvan Varga	<istvan@csounds.com>
	* Engine/oload.c:
	* Engine/twarp.c:
	* H/csoundCore.h:
	* InOut/libsnd_u.c:
	* OOps/fftlib.c:
	* OOps/fout.c:
	* OOps/sdif.c:
	* Top/csound.c:
	  minor fixes; removed a few more static variables
	* Engine/express.c:
	* Engine/rdorch.c:
	* Opcodes/ugmoss.c:
	  fixed binary operators
	* OOps/ugrw1.c:
	  fixed printk2 opcode

2005-03-30  John ff  <jpff@codemist.co.uk>

	* Engine/swrite.c: Remove statics from swrite.c

	* Engine/oload.c: 
	* Engine/twarp.c: Removed statics from file twarp.c

2005-03-29	Istvan Varga	<istvan@csounds.com>
	* more API changes (affecting a large number of files)
	* Opcodes/newfils.c:
	  fixed statevar bug

2005-03-28	Istvan Varga	<istvan@csounds.com>
	* Engine/auxfd.c, Engine/fgens.c, Engine/insert.c, Engine/oload.c: